Updated POST and PUT controllers to validate and save correct fields
